name:           levenshtein
version:        0.1
cabal-version:  >= 1.2
author:         Kevin Charter
synopsis:       Toy programs for computing Levenshtein distance.
build-type:     Simple
tested-with:    GHC == 7.0.2

Executable lev-bench
  Build-Depends:  base >= 4 && < 5,
                  criterion >= 0.5 && < 1,
                  deepseq >= 1.1.0.2 && < 2,
                  vector >= 0.7 && < 1,
                  QuickCheck >= 2.4 && < 3
  Main-Is:        lev-bench.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -- -prof -auto-all -caf-all
                  -O2

Executable levn-bench
  Build-Depends:  base >= 4 && < 5,
                  criterion >= 0.5 && < 1,
                  deepseq >= 1.1.0.2 && < 2,
                  vector >= 0.7 && < 1,
                  QuickCheck >= 2.4 && < 3
  Main-Is:        levn-bench.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -- -prof -auto-all -caf-all
                  -O2

Executable lev-test
  Build-Depends:  base >= 4 && < 5,
                  vector >= 0.7 && < 1,
                  QuickCheck >= 2.4 && < 3
  Main-Is:        lev-test.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -- -prof -auto-all -caf-all
                  -O2

Executable lev1-prof
  Build-Depends:  base >= 4 && < 5,
                  vector >= 0.7 && < 1
  Main-Is:        lev1-prof.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -auto-all -caf-all -rtsopts
                  -O2

Executable lev2-prof
  Build-Depends:  base >= 4 && < 5,
                  vector >= 0.7 && < 1
  Main-Is:        lev2-prof.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -auto-all -caf-all -rtsopts
                  -O2

Executable lev3-prof
  Build-Depends:  base >= 4 && < 5,
                  vector >= 0.7 && < 1
  Main-Is:        lev3-prof.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  ---auto-all -caf-all -rtsopts
                  -O1

Executable lev4-prof
  Build-Depends:  base >= 4 && < 5,
                  vector >= 0.7 && < 1
  Main-Is:        lev4-prof.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -auto-all -caf-all -rtsopts
                  -O2

Executable kitten-sitting-bench
  Build-Depends:  base >= 4 && < 5,
                  criterion >= 0.5 && < 1,
                  deepseq >= 1.1.0.2 && < 2,
                  vector >= 0.7 && < 1,
                  QuickCheck >= 2.4 && < 3
  Main-Is:        kitten-sitting-bench.hs
  GHC-Options:    -fwarn-incomplete-patterns
                  -fwarn-unused-imports
                  -- -prof -auto-all -caf-all
                  -O2
